# ChangeLog for media-sound/abcm2ps
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/abcm2ps/ChangeLog,v 1.79 2013/07/16 09:53:31 radhermit Exp $

*abcm2ps-7.5.7 (16 Jul 2013)

  16 Jul 2013; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.5.7.ebuild:
  Version bump.

*abcm2ps-7.5.5 (15 Jun 2013)

  15 Jun 2013; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.5.5.ebuild:
  Version bump.

*abcm2ps-7.5.4 (29 May 2013)

  29 May 2013; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.5.4.ebuild:
  Version bump.

  29 Apr 2013; Tim Harder <radhermit@gentoo.org> -abcm2ps-7.3.4.ebuild,
  -abcm2ps-7.4.0.ebuild, -abcm2ps-7.5.0.ebuild:
  Remove old.

*abcm2ps-7.5.2 (23 Mar 2013)

  23 Mar 2013; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.5.2.ebuild:
  Version bump.

*abcm2ps-7.5.0 (02 Mar 2013)

  02 Mar 2013; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.5.0.ebuild:
  Version bump.

  05 Feb 2013; Tim Harder <radhermit@gentoo.org> -abcm2ps-6.6.19.ebuild,
  -abcm2ps-7.3.3.ebuild:
  Remove old.

*abcm2ps-7.4.0 (05 Feb 2013)

  05 Feb 2013; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.4.0.ebuild:
  Version bump.

  22 Jan 2013; Agostino Sarubbo <ago@gentoo.org> abcm2ps-6.6.22.ebuild:
  Stable for x86, wrt bug #451964

  15 Jan 2013; Agostino Sarubbo <ago@gentoo.org> abcm2ps-6.6.22.ebuild:
  Stable for amd64, wrt bug #451964

  14 Jan 2013; Tim Harder <radhermit@gentoo.org> -abcm2ps-6.6.21.ebuild,
  -abcm2ps-7.3.0.ebuild:
  Remove old.

*abcm2ps-7.3.4 (14 Jan 2013)

  14 Jan 2013; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.3.4.ebuild:
  Version bump.

*abcm2ps-7.3.3 (24 Dec 2012)

  24 Dec 2012; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.3.3.ebuild:
  Version bump.

  04 Dec 2012; Tim Harder <radhermit@gentoo.org> -abcm2ps-6.6.20.ebuild,
  -abcm2ps-7.1.0.ebuild:
  Remove old.

*abcm2ps-6.6.22 (04 Dec 2012)

  04 Dec 2012; Tim Harder <radhermit@gentoo.org> +abcm2ps-6.6.22.ebuild:
  Version bump.
