@@ -6,22 +6,24 @@ DIST abcm2ps-7.5.2.tar.gz 313116 SHA256 d37ea789f63643dbab9683627e954e5c973f3420
 DIST abcm2ps-7.5.4.tar.gz 314881 SHA256 e32deab9491c95ee578dc9e6362858baa408ccd9fa0bc0350093c8408ee6b368 SHA512 34ab787c048024a43224019ddf8d02fc7aa2ed62de96607575c9b7efcea364dc46b90c3f9990db73b3ecdff7a1a30b4623b91fcc03ff860de3319fde1ecf1f7d WHIRLPOOL ff6b9b16eccbd0b6230cc3a10803291776cde90d5d0cf1979268011c950b9f68ae1bbd0ef1b6fd6258cbfa5a6aa5e265c86d355ffbf44c82c747ed519ce6a4ee
 DIST abcm2ps-7.5.5.tar.gz 315420 SHA256 5fd3f388dddb40dddae489daffb74643f2700146ef759a08476f176de039854e SHA512 636c16038f541fa3a69702debb081cddb675cbe2ab6dd9a009d6e89e5d68134b788f578de8376be894a78d1a9ea2ac7e86ca1103838ed39b84d985c5fcdeacea WHIRLPOOL 510660d21f9c6aec7c51674666312bf0d58b4879ca06ec19f338ea0e19edaad2a07cffae33d8429cbe1e07b93dcbb0f6a483654f72f98cc678422508773440ef
 DIST abcm2ps-7.5.7.tar.gz 316742 SHA256 b1d93abcbd72e997a04ea2a182e5712bea426a0b4bc6f1735fbaae268fc8b3ad SHA512 8073107107d3cee6b4b300efc917e5e5db3fe0ebdf54b2a3fa72e8ad973781e196eeaa1527ea321a5ccca18066ae3eed001a1990c7a0282669968c9612b8e129 WHIRLPOOL 8e2f04b87b786157eb78b7787c79a609174a6ce528d794aae891cc59e6a5fda883c0dabf8596c1b5f488025ba09a4f8de66b5aa8048dbf61ac6c9af7822f9d06
+DIST abcm2ps-7.5.8.tar.gz 319414 SHA256 761931820dd14513e60a4f3fbf59c26dfbf9a867211a29cbed9d1dbece937f25 SHA512 2931a999ee6ade215a1c5e63e9366ed2a16760a66dcb26dca31abe26a7bc65b7ede6a05e85377662739f6c280c29400b52d2cdeef61760b16106096416d3a15d WHIRLPOOL c75d493b76d988eaf88946dbce07cf018831fefb925c322baa6b7a33695e3375ea1ac569dd88074fcde6e71b88d140bcb180b3563add4f8666e903e76e71a34c
 DIST transpose_abc.pl 21045 SHA256 bd6960872bfbc9f71f183f36d533ea33b8cf62a6027b447f0b0b8adfa25a2848 SHA512 dc2623608a7b59d7e0c4d25160e69f696f170e9938dc3e035edbaf6f0163b4c6139892ec8734ea2aaba997507dcf32208562e898690600dc3c199046d4d151f3 WHIRLPOOL 81e327bbd76b40826adab06f7756c79c60289b21432b792c848db3ba1354528fa4f1a074cba890b6087cfac6e712427c6cbb2c9e6679c8ced22c362f6ec005f3
 EBUILD abcm2ps-6.6.22.ebuild 953 SHA256 5add5f79340d88fd252d2d1433f4a3b0953dbbcdc8fd4acb47d90f478ae1dc4a SHA512 eca6f9af2e3dcf3519b31fd8df49c5902021712bbf1cd548ec39d46be64bbcbed31251d3fa31e90e0bdb3f0734a2e30335c608151db551c23ef5d031dc3a02f9 WHIRLPOOL ae88fd6ab795197efea1300d814f5aa4eb4d88e286cd599523e7f81014b7d86b4779acbbab75315147915fabb89671bb45e007dd217746ede8b136f0c966e7e1
 EBUILD abcm2ps-7.5.2.ebuild 960 SHA256 6a102c2a3e9a88062a821aab8655c45d8fd7a65d181b40d4fcfc46a2ccddf4d4 SHA512 1f030f3c10e122a19d6bf90407bd00623d156e9c0923c2ec4987589ac7e2668703704746ee6cde78734ecc9e8a0ee389a5c167933e3452ae8644209a05da8a5f WHIRLPOOL 9ef15eae0b4cb7c30e57e4ccd249ac8b3917191df58e8af11f30e52bfdab87ab2975ba36f59fa83341b952ad67ab24127134c11bae89c3c237a90a5d30cb8f5f
 EBUILD abcm2ps-7.5.4.ebuild 960 SHA256 8e7a45b0f91dd81416718585fafa7b27c07262805f33de8ecc198228c2589b45 SHA512 9440992c84173c02cb38af62e3b0709637406d6722df64da22d022f7808eafa1f0f25d350792fe242ffcb0a6f25146f7c3b734297d9cceb4b93e9704ffa4e401 WHIRLPOOL ef90b15597c72a9c0dff4367bc407c424bbe7e7b28ee860ade6682cd3db252962059f142cdc893aa3b993d21be7307cb24523a95fdb1d3bda8eae07975b72482
 EBUILD abcm2ps-7.5.5.ebuild 960 SHA256 c9b81381819181c06ab02194c96309083f8237d2a639eb0465a63e3f8fa8fe8e SHA512 21d2a2c0db294d45833661205eeca17537a764a4d307046fb22b332f870739266f3dc10c84ff1816ba762a4815d5f79cd486e190573a6031d26bc39391abd19b WHIRLPOOL 2d48ee10d1eaae84c454a9832574b997e78de411bbf4785763bf73308aaf9648a1a1e77af4ffdf80aecc6836067ad48b3508422c5396c2c7c1fb4041fa21413c
 EBUILD abcm2ps-7.5.7.ebuild 960 SHA256 b1c6e471e69938babc4c5d2c5f9858c8b44b0c6fcce2c76f78911dc00ee5e4a0 SHA512 3c362c5663944b42b411dbbd4913ae34a3d78efc18b94970e5666a614c07e056d83218fb2c0cae3a879d0e896131062118aff3e750f651fce3f6fafdd8836119 WHIRLPOOL c3e69baadc1c795d50a11c092f6ed02138735696232af4adc5e5eac786108b57dc6d6c7dad6306958c1d5e2ebb47137fac03d55c272e336aef563a4d55e32da4
-MISC ChangeLog 10541 SHA256 aafd1eeb00de6952ee1e29c5dfff3a96aba6fb73280ca1727e91eb03a290a1ee SHA512 bbc7814db9dd9419cb882a092c63fe877b55fc68657b928d43e2d011fdfdd102f21c21801fe5d9d65ff376d527e5cfa3693a32b6530b663d3caa9211e80192f3 WHIRLPOOL 2a7f2d65de5077ac28efec66da177b663d70379c488f69565a57d7fa74238ac653f31ef603670689e96a7167858b8173f183686527da945029661b0cc4893b6d
+EBUILD abcm2ps-7.5.8.ebuild 960 SHA256 13a87529c5974f384d305e820aab3375980cb2fdd5cd608a38183e458adbc5f7 SHA512 374ec4a0f92477e965acc654208b5e1c4a55f6229d954cec0b7d467bf15f059afe4953525f775183cd45e6d01712a605af5c0ea38f1facf8e4948736354a4d4c WHIRLPOOL 966cc43f556ccb27e5738d45076ea1c7476b352175cd8fa11ffb7e32767bb85630cdd473645bc91e26694c806e4720c54c285622d3017c83dfddf558bab1ca45
+MISC ChangeLog 10660 SHA256 44c0fcb6717b6f8d1d1f32aaacde191a41c38601c8bac912d9c0c0b57233f3b4 SHA512 7bf4932f8e24e7f2d15feb188ad14b72c2f3c06795b94cb0bfdd632da742aae7db112295aa930f0674317fff7ac3428394571cb50ecd5093ae9a2693caf35db1 WHIRLPOOL 398d7f66b9e1a2a64b6af1466cd58412b90ca4df84ac82172fdf5a4d20212df1117c1e151aa24ce1f2d2dec2f0e9c1283d1567084ca4d532b638b6dabf633010
 MISC metadata.xml 266 SHA256 b6d28625a7ff66404b06e40afb779f07f18be590235136a1229eff61c270eddd SHA512 c77f9248d85edc37943b704db4083911a5151d9903141b5f2e4dfe61cb1ebc1bedd57a54730507af3ced6586f9c7474b80386b6c65903a330351e0237a7f2b62 WHIRLPOOL 792da133a217d8a169e408e09f709c944225aa2a7a521305a98718a1aa046be2d06d5bf8f838e1309a6f750515ac4376f3cdcb0693cad0127d6287ee7d867b42
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJR5RgcAAoJEEqz6FtPBkyjiKEIALXtGTqt8Spm9TlwkRYz4whv
-SjuY0vzBXUl5Gdhec7D2XxPMYI8M9+QUfDaQMrLbw4UjWni7UPF47XcFN5S4VDL8
-xsrvxtUvaOJ+8I2JngUIzln2aLOjZeJkq0DvHFAKD61UjvqsDsNz1/wZm4vgC0FV
-EfOSfP27nQK7owy/x+9yudBIXr5EeeaKS+aattQZRCHtOSX1v7wvMk4R8vGeTbfJ
-SJXOHgodS+k6mIUqTpq1vOKISwh6LOWQ5cPyYS72dmmwssLUv9cI/KDM88+mxg9B
-q12D2F0YOC5+7tbMir5FSaDmkEohxF0GH7z/VgEAcsw9Kf8bsb6hegITnNZha2M=
-=RF9v
+iQEcBAEBCAAGBQJSDaejAAoJEEqz6FtPBkyjk4EH/1DCtHWVO0eQgquj+2Y+IMcc
+Ch5ikOGKR1g32Y/gEpUmb0QTzfvNnuFptPvIqmaLTxiIcIleG4mWrGpUtMqJYRhI
+OL1AypMZxdfkCcsV00ArCqZ+Jl4LOF7dR3kIHzL22gUCUED5umQlctoaRwtAm5MH
+VqAnavH3l7DbUrZDu3vPUbn/7R6RlwRsfCj08pzfK4+zer+0Q0kEYeMgLKI/rjlV
+NFUg6Cwlwv1yeMX2ZX01DgJ5lfzcfl6NmwNmMHbrxWVq2BqGZvecE5qVbIAOriEQ
+f/MVIrkEOsDbrfbOO+qW5Uc/oOSpFtcXHO0Z1dbc7z4QES6slDUfb9/iA4JNGUo=
+=18En
 -----END PGP SIGNATURE-----
