@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/abcm2ps
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/abcm2ps/ChangeLog,v 1.79 2013/07/16 09:53:31 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/abcm2ps/ChangeLog,v 1.80 2013/08/16 04:16:33 radhermit Exp $
+
+*abcm2ps-7.5.8 (16 Aug 2013)
+
+  16 Aug 2013; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.5.8.ebuild:
+  Version bump.
 
 *abcm2ps-7.5.7 (16 Jul 2013)
 
